# task-hookrs

./: .travis.yml  Cargo.toml  index.html  search-index.js
chrono/: enum.Weekday.html  index.html  struct.Duration.html  trait.Datelike.html  trait.Timelike.html
chrono/date/: constant.MAX.html  constant.MIN.html  index.html  struct.Date.html
chrono/datetime/: index.html  struct.DateTime.html
chrono/duration/: index.html  struct.Duration.html
chrono/format/: enum.Fixed.html  enum.Item.html  enum.Numeric.html  enum.Pad.html  fn.format.html  fn.parse.html  index.html  struct.DelayedFormat.html  struct.ParseError.html  type.ParseResult.html
chrono/naive/: index.html
chrono/offset/: enum.LocalResult.html  index.html  trait.Offset.html  trait.TimeZone.html
implementors/chrono/: trait.Datelike.js
implementors/itoa/: trait.Integer.js
implementors/num_integer/: trait.Integer.js
serde/: index.html
serde/bytes/: index.html  struct.ByteBuf.html  struct.ByteBufVisitor.html  struct.Bytes.html
serde/de/: enum.Type.html  index.html  trait.Deserialize.html  trait.Deserializer.html  trait.EnumVisitor.html  trait.Error.html  trait.MapVisitor.html  trait.SeqVisitor.html  trait.VariantVisitor.html  trait.Visitor.html
serde_json/: index.html
src/: lib.rs  priority.rs  task.rs
task_hookrs/: index.html  sidebar-items.js
uuid/: constant.NAMESPACE_DNS.html  constant.NAMESPACE_OID.html  constant.NAMESPACE_URL.html  constant.NAMESPACE_X500.html  enum.ParseError.html  enum.UuidVariant.html  enum.UuidVersion.html  index.html  struct.Hyphenated.html  struct.Simple.html  struct.Urn.html  struct.Uuid.html  type.UuidBytes.html
(+295 files in other folders)
