[package]
name = "task-hookrs"
version = "0.2.0"
authors = ["Matthias Beyer <mail@beyermatthias.de>",
           "Mario Krehl <mario-krehl@gmx.de>",
          ]

description = "Crate to work with taskwarrior exported JSON"
keywords = ["json", "taskwarrior", "todo", "import", "export"]

documentation = "https://matthiasbeyer.github.io/task-hookrs/task_hookrs/index.html"
homepage      = "https://github.com/matthiasbeyer/task-hookrs"
repository    = "https://github.com/matthiasbeyer/task-hookrs"
readme        = "./README.md"
license       = "LGPL-2.1"

[features]
default = []
logging = []

[dependencies]
chrono = "0.2.22"
serde = "0.7.13"
serde_json = "0.7.4"
uuid = { version = "0.2.2", features = ["serde"] }
log = { version = "0.3.6", optional = true }

[dev-dependencies]
env_logger = "0.3.3"

