[package]
name = "task-hookrs"
version = "0.2.0"
authors = ["Matthias Beyer <mail@beyermatthias.de>",
           "Mario Krehl <mario-krehl@gmx.de>",
          ]

description = "Crate to work with taskwarrior exported JSON"
keywords = ["json", "taskwarrior", "todo", "import", "export"]

documentation = "https://matthiasbeyer.github.io/task-hookrs/task_hookrs/index.html"
homepage      = "https://github.com/matthiasbeyer/task-hookrs"
repository    = "https://github.com/matthiasbeyer/task-hookrs"
readme        = "./README.md"
license       = "LGPL-2.1"

[dependencies]
chrono = "0.2.22"
log = "0.3.6"
serde = "0.8.10"
serde_json = "0.8.2"
uuid = { version = "0.3.1", features = ["serde"] }

[dev-dependencies]
env_logger = "0.3.3"

